# mb8

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: coverage.yml  rust.yml
asm/: cpu.asm  ext.asm  isa.asm  std.asm
crates/cli/: Cargo.toml
crates/cli/src/: bitmap.rs  compile.rs  config.rs  debug.rs  filesystem.rs  keyboard.rs  lib.rs  main.rs  tty.rs  vm.rs  vmrun.rs
crates/cli/tests/: test_filesystem_functions.rs  test_keyboard_functions.rs
crates/mb8-isa/src/: decode.rs  encode.rs  lib.rs  opcodes.rs  registers.rs
crates/mb8-isa/tests/: test_encode_decode.rs
crates/mb8/src/: bus.rs  lib.rs  main.rs  mem.rs  parser.rs  registers.rs  vm.rs
crates/mb8/src/dev/: bus.rs  disk.rs  gpu.rs  keyboard.rs  mod.rs  ram.rs  rand.rs  rom.rs  utils.rs
crates/mb8/src/mem/: context.rs  mod.rs
crates/mb8/src/ops/: add.rs  and.rs  call.rs  cmp.rs  debug.rs  dec_i.rs  draw.rs  halt.rs  inc_i.rs  jcr.rs  jmp.rs  jncr.rs  jnz.rs  jnzr.rs  jr.rs  jz.rs  jzr.rs  ld.rs  ldi.rs  ldi_i.rs  mod.rs  mov.rs  nop.rs  or.rs  pop.rs  push.rs  ret.rs  shl.rs  shr.rs  st.rs  sub.rs  sys.rs  xor.rs
crates/mb8/src/registers/: context.rs  mod.rs
crates/mb8/tests/: test_disk_syscalls.rs  test_fs_syscalls.rs  test_gpu_syscalls.rs  test_rand_syscalls.rs  test_std.rs
crates/mb8c/: Cargo.toml  README.md
crates/mb8c/examples/: cond.c  sum.c  test.mc8  vars.c
crates/mb8c/src/: ast.rs  error.rs  gen_ir.rs  gen_mb8.rs  hir.rs  ir.rs  irdump.rs  lib.rs  main.rs  parse.rs  pipe.rs  preprocess.rs  regalloc.rs  sema.rs  token.rs  tokens.rs
crates/mb8c/src/codegen/: mb6.rs  mb8.rs  mod.rs  writter.rs
crates/mb8c/src/context/: mod.rs  symbols.rs  types.rs
crates/mb8c/src/hir/: helpers.rs  instructions.rs  mod.rs  (+3 more)
crates/mb8c/tests/: test_compiler.rs  test_ir.rs  test_lexer.rs  test_parser.rs  test_pointer.rs  test_return.rs  test_sema.rs  test_vars.rs
docs/: CONTRIBUTING.md  SUMMARY.md  abi.md  asm.md  book.toml  examples.md  ext.md  flags.md  ipc.md  isa.md  memory.md  opcode.md  overview.md  registers.md  std.md  syscalls.md
examples/: bot.asm  draw.asm  ext.asm  jugde.asm  logo.asm
kernel/: init.asm  main.asm  syscalls.asm
kernel/tests/: test_gpu_mode.asm  test_std_memcpy.asm  test_std_strcmp.asm  test_sys_disk_read_block.asm  test_sys_disk_set_block.asm  test_sys_disk_write_block.asm  test_sys_fs_delete.asm  test_sys_fs_find.asm  test_sys_fs_list.asm  test_sys_fs_read.asm  test_sys_fs_write.asm  test_sys_gpu_mode.asm  test_sys_rand.asm  test_sys_write.asm  test_sys_writeln.asm
user/: exit.asm  hello.asm  hello.mc8  help.asm  hw.asm  ls.asm  pong.asm  pxl.asm  sh.asm
web/: index.html
(+86 files in other folders)
