[workspace]
members = [ "crates/cli", "crates/mb8", "crates/mb8-isa" ]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]

[workspace.lints.rust]
unused = { level = "warn", priority = -1 }
unused_imports = "warn"
dead_code = "warn"
missing_debug_implementations = "warn"
missing_docs = "allow"
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
