[package]
name = "mb8-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ariadne = { version = "0.6.0" }
clap = { version = "4.5.51", features = ["derive"] }
minifb = "0.28.0"

mb8 = { path = "../mb8" }
mb8c = { path = "../mb8c" }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
