[package]
name = "mb8-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = ["desktop"]
desktop = ["dep:clap"]
wasm = ["dep:wasm-bindgen", "dep:web-sys", "dep:console_error_panic_hook"]

[[bin]]
name = "cli-desktop"
path = "src/bin/desktop.rs"
required-features = ["desktop"]

[dependencies]
ariadne = { version = "0.6.0" }
clap = { version = "4.5.51", features = ["derive"], optional = true }
minifb = "0.28.0"

mb8 = { path = "../mb8" }
mb8c = { path = "../mb8c" }

# WASM
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
